# goskill

./: .gitignore  AGENTS.md  LICENSE  MANIFEST.in  Makefile  README.md  go.mod  go.sum  pyproject.toml  setup.py  skills-lock.json
.github/agents/: bubbletea-architecture.agent.md
.github/workflows/: ci-cd.yml
cmd/goskill/: main.go
internal/agents/: agents.go
internal/commands/: commands.go  commands_test.go  find_results.go  find_selector.go  output.go  output_renderer.go  skill_list_renderer.go  skill_resolve_spinner.go  skill_selector.go  version_check.go  version_check_test.go
internal/github/: github.go
internal/installer/: installer.go
internal/lockfile/: lockfile.go  lockfile_test.go
internal/skills/: security.go  security_test.go  skills.go  skills_test.go
internal/source/: source.go  source_test.go
internal/terminal/: sanitize.go
internal/wellknown/: wellknown.go  wellknown_test.go
src/skills_cli/: __init__.py  __main__.py
